--- a/server/model-config.json
+++ b/server/model-config.json
@@ -14,25 +14,37 @@
     ]
   },
   "User": {
-    "dataSource": "db"
+    "dataSource": "postgres"
   },
   "AccessToken": {
-    "dataSource": "db",
+    "dataSource": "postgres",
     "public": false
   },
   "ACL": {
-    "dataSource": "db",
+    "dataSource": "postgres",
     "public": false
   },
   "RoleMapping": {
-    "dataSource": "db",
+    "dataSource": "postgres",
     "public": false,
     "options": {
       "strictObjectIDCoercion": true
     }
   },
   "Role": {
-    "dataSource": "db",
+    "dataSource": "postgres",
     "public": false
+  },
+  "Merchant": {
+    "dataSource": "postgres",
+    "public": true
+  },
+  "Market": {
+    "dataSource": "postgres",
+    "public": true
+  },
+  "container": {
+    "dataSource": "photos",
+    "public": true
   }
 }
